[package]
name = "gbm"
description = "A pure rust implementation of libgbm"
license = "MIT"
version = "0.16.1"
keywords = ["gbm", "drm", "bindings"]
categories = ["graphics"]
authors = ["Victoria Brekenfeld <github@drakulix.de>"]
exclude = [".gitignore", ".travis.yml", ".rustfmt.toml", ".github"]
edition = "2021"

[dependencies]
libc = "0.2"
bitflags = "2"
drm-fourcc = "2.2"

[dependencies.gbm-sys]
version = "0.3.1"
path = "./gbm-sys"

[dependencies.drm]
version = "0.14.0"
optional = true

[dependencies.serde]
# Minimal serde version that can compile serde-annotated bitflags v2.
# Workaround that allows -Z minimal-versions build to succeed despite bitflags
# crate not declaring minimum versions of its dependencies precisely enough.
version = "1.0.103"
features = ["derive"]
optional = true

[dev-dependencies.drm]
version = "0.14.0"

[features]
default = ["import-egl", "drm-support"]
import-egl = []
drm-support = ["drm"]
use_bindgen = ["gbm-sys/use_bindgen"]
serde = ["dep:serde", "bitflags/serde"]

[workspace]
members = ["gbm-sys"]
